fix jumping in main nav

--- a/AngularProject/app/app.css
+++ b/AngularProject/app/app.css
@@ -8,7 +8,11 @@ body {
   
 }
 
-
+.navbar-nav>li, .navbar-nav {
+    /* float: left !important; */
+    display: inline-block;
+    white-space: nowrap;
+}
 
 .mainClass {
     background-image:url("img/leaf.jpg");
@@ -130,10 +134,6 @@ a:focus {
   display: block!important;
   margin:0;
   padding:0;
-}
-
-.navbar-nav>li, .navbar-nav {
-  float: left !important;
 }
 
 .navbar-nav.navbar-right:last-child {
@@ -499,5 +499,20 @@ object:hover {
     } 
     #cube-wrapper {
         margin-top:200px;
+    }
+}
+
+
+
+
+
+
+@media (min-width: 768px) {
+    .navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-nav>li {
+    float: none;
     }
 }
